<resources>
    <string name="app_name">RecipeInfo</string>
    <string name="ingredients_tv">Ingredients</string>
    <string name="appwidget_text">INGREDIENTS</string>
    <string name="add_widget">Add widget</string>
    <string name="title_recipesteps_list">steps</string>
    <string name="title_recipesteps_detail">RecipeSteps Detail</string>
</resources>
