<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.example.lenovo.recipeinfo.RecipeStepsListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Ingredients"
            android:textColor="@color/color_red"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ingredient_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RecipeSteps"
            android:textColor="@color/color_red"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipesteps_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layoutManager="LinearLayoutManager"
            tools:context="com.example.lenovo.recipeinfo.RecipeStepsListActivity"
            tools:listitem="@layout/recipesteps_list_content" />

    </LinearLayout>
</ScrollView>